scripts/deployment/agile-retro-app-deployment.gcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: agile-retro-app-service
  labels:
    app: agile-retro-app-service
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    app: agile-retro-app
    tier: backend
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: agile-retro-app-deployment
spec:
  selector:
    matchLabels:
      app: agile-retro-app
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: agile-retro-app
        tier: backend
        track: stable
    spec:
      containers:
        - name: agile-retro-app
          image: "gcr.io/agileretro-232800/agile-retro-app"
          ports:
            - name: http
              containerPort: 5000
