scripts/deployment/agile-retro-web-deployment.gcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: agile-retro-web-service
  labels:
    app: agile-retro-web-service
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: agile-retro-web
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agile-retro-web-deployment
spec:
  selector:
    matchLabels:
      app: agile-retro-web
      tier: web
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: agile-retro-web
        tier: web
        track: stable
    spec:
      containers:
        - name: agile-retro-web
          image: "gcr.io/agileretro-232800/agile-retro-web"
          ports:
            - name: http
              containerPort: 80
